// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dot-artist match example snapshot 1`] = `
Object {
  "mark": Object {
    "attrs": Object {},
    "children": Array [
      Object {
        "attrs": Object {
          "fill": "white",
          "stroke": "transparent",
        },
        "class": "dot__frame-bg",
        "type": "rect",
      },
      Object {
        "attrs": Object {},
        "children": Array [
          Object {
            "attrs": Object {
              "fill": "white",
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontWeight": "normal",
              "text": "Sub",
              "textAlign": "center",
              "textBaseline": "hanging",
            },
            "type": "text",
          },
          Object {
            "attrs": Object {
              "fill": "orange",
              "lineDash": null,
              "lineWidth": 1,
              "radius": 2,
              "stroke": "#111",
            },
            "type": "rect",
          },
          Object {
            "attrs": Object {
              "fill": "purple",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontWeight": "normal",
              "text": "a1",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "type": "group",
      },
      Object {
        "attrs": Object {},
        "children": Array [
          Object {
            "attrs": Object {
              "lineDash": null,
              "lineWidth": 1,
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          Object {
            "attrs": Object {
              "fill": "white",
              "stroke": "#3b4044",
            },
            "type": "path",
          },
        ],
        "type": "group",
      },
      Object {
        "attrs": Object {},
        "children": Array [
          Object {
            "attrs": Object {
              "lineDash": null,
              "lineWidth": 1,
              "stroke": "blue",
            },
            "type": "path",
          },
          Object {
            "attrs": Object {
              "fill": "blue",
            },
            "type": "path",
          },
        ],
        "type": "group",
      },
      Object {
        "attrs": Object {},
        "children": Array [
          Object {
            "attrs": Object {
              "lineDash": null,
              "lineWidth": 1,
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
            },
            "type": "path",
          },
        ],
        "type": "group",
      },
      Object {
        "attrs": Object {},
        "mark": Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "fill": "orange",
                "lineDash": null,
                "lineWidth": 1,
                "radius": 2,
                "stroke": "#111",
              },
              "type": "path",
            },
          ],
          "type": "group",
        },
        "type": "symbol",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "end",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      Object {
        "attrs": Object {
          "fill": "orange",
          "lineDash": null,
          "lineWidth": 1,
          "radius": 2,
          "stroke": "#111",
        },
        "type": "rect",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "b1",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      Object {
        "attrs": Object {
          "fill": "orange",
          "lineDash": null,
          "lineWidth": 1,
          "radius": 2,
          "stroke": "#111",
        },
        "type": "rect",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "c1",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
    ],
    "type": "group",
  },
}
`;

exports[`dot-artist renders different arrow type 1`] = `
Object {
  "mark": Object {
    "attrs": Object {},
    "children": Array [
      Object {
        "attrs": Object {
          "fill": "lightyellow",
          "stroke": "transparent",
        },
        "class": "dot__frame-bg",
        "type": "rect",
      },
      Object {
        "attrs": Object {},
        "children": Array [
          Object {
            "attrs": Object {
              "lineDash": null,
              "lineWidth": 1,
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
            },
            "type": "path",
          },
        ],
        "type": "group",
      },
      Object {
        "attrs": Object {},
        "children": Array [
          Object {
            "attrs": Object {
              "lineDash": null,
              "lineWidth": 1,
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          Object {
            "attrs": Object {
              "fill": "lightyellow",
              "stroke": "#3b4044",
            },
            "type": "path",
          },
        ],
        "type": "group",
      },
      Object {
        "attrs": Object {},
        "children": Array [
          Object {
            "attrs": Object {
              "lineDash": null,
              "lineWidth": 1,
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          Object {
            "attrs": Object {
              "lineCap": "round",
              "stroke": "#3b4044",
            },
            "type": "path",
          },
        ],
        "type": "group",
      },
      Object {
        "attrs": Object {
          "lineDash": null,
          "lineWidth": 1,
          "radius": 2,
          "stroke": "#3b4044",
        },
        "type": "rect",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "a1",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      Object {
        "attrs": Object {
          "lineDash": null,
          "lineWidth": 1,
          "radius": 2,
          "stroke": "#3b4044",
        },
        "type": "rect",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "b1",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      Object {
        "attrs": Object {
          "lineDash": null,
          "lineWidth": 1,
          "radius": 2,
          "stroke": "#3b4044",
        },
        "type": "rect",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "n1",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      Object {
        "attrs": Object {
          "lineDash": null,
          "lineWidth": 1,
          "radius": 2,
          "stroke": "#3b4044",
        },
        "type": "rect",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "end",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      Object {
        "attrs": Object {
          "lineDash": null,
          "lineWidth": 1,
          "radius": 2,
          "stroke": "#3b4044",
        },
        "type": "rect",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "a2",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "Graph Label",
          "textAlign": "center",
          "textBaseline": "hanging",
        },
        "type": "text",
      },
    ],
    "type": "group",
  },
}
`;

exports[`dot-artist renders different node type 1`] = `
Object {
  "mark": Object {
    "attrs": Object {},
    "children": Array [
      Object {
        "attrs": Object {},
        "mark": Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "lineDash": null,
                "lineWidth": 1,
                "radius": 2,
                "stroke": "#3b4044",
              },
              "type": "ellipse",
            },
          ],
          "type": "group",
        },
        "type": "symbol",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "bold",
          "text": "ellipse",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      Object {
        "attrs": Object {},
        "mark": Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "lineDash": null,
                "lineWidth": 1,
                "r": 29,
                "radius": 2,
                "stroke": "#3b4044",
              },
              "type": "circle",
            },
          ],
          "type": "group",
        },
        "type": "symbol",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "bold",
          "text": "circle",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      Object {
        "attrs": Object {},
        "mark": Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "lineDash": null,
                "lineWidth": 1,
                "radius": 2,
                "stroke": "#3b4044",
              },
              "type": "path",
            },
          ],
          "type": "group",
        },
        "type": "symbol",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "bold",
          "text": "diamond",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      Object {
        "attrs": Object {
          "fill": "transparent",
          "lineDash": null,
          "lineWidth": 1,
          "radius": 2,
          "stroke": "transparent",
        },
        "type": "rect",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "bold",
          "text": "plaintext",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
    ],
    "type": "group",
  },
}
`;
